--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-animatable": "^1.4.0",
     "react-native-bouncy-checkbox": "^4.1.2",
     "react-native-gesture-handler": "^2.21.2",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "^5.0.0",
     "react-native-screens": "^4.3.0",
     "react-native-svg": "^15.10.1",
